<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/fragment_feed_list_action_create"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/create_new_feed"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/fragment_feed_list_action_refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/refresh"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/fragment_feed_list_action_more"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/more"
        app:showAsAction="ifRoom|withText">

        <menu>

            <item
                android:id="@+id/fragment_feed_list_action_import"
                android:title="@string/import_feeds"
                app:showAsAction="ifRoom|withText"/>

            <item
                android:id="@+id/fragment_feed_list_action_nuke"
                android:title="@string/delete_all_feeds"
                app:showAsAction="ifRoom|withText"/>

            <item
                android:id="@+id/fragment_feed_list_action_preferences"
                android:title="@string/preferences"
                app:showAsAction="ifRoom|withText"/>

        </menu>

    </item>

</menu>