<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.EditFeedFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/fragment_edit_feed_toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/edit_feed" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_edit_feed_essential_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_edit_feed_toolbar"
            app:layout_constraintBottom_toTopOf="@+id/fragment_edit_feed_additional_group"
            android:layout_margin="16dp" >

            <TextView
                android:id="@+id/fragment_edit_feed_essential_group_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/essential_information"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/fragment_edit_feed_name_input_wrap" >
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_edit_feed_name_input_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_edit_feed_essential_group_title"
                app:layout_constraintBottom_toTopOf="@+id/fragment_edit_feed_url_input_wrap">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_edit_feed_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_edit_feed_url_input_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_edit_feed_name_input_wrap">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_edit_feed_url_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/url"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_edit_feed_additional_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_edit_feed_essential_group"
            android:layout_margin="16dp" >

            <TextView
                android:id="@+id/fragment_edit_feed_additional_group_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/additional_information"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/fragment_edit_feed_filter_input_wrap" >
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_edit_feed_filter_input_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_edit_feed_additional_group_title"
                app:layout_constraintBottom_toTopOf="@+id/fragment_edit_feed_refresh_interval_input_wrap">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_edit_feed_filter_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/filter"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_edit_feed_refresh_interval_input_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_edit_feed_filter_input_wrap"
                app:suffixText="@string/seconds">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_edit_feed_refresh_interval_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/refresh_interval"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_edit_feed_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/fragment_edit_feed_submit_button"
            android:text="@string/delete"
            android:layout_margin="16dp"
            app:backgroundTint="@null"
            android:background="@color/red_500" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_edit_feed_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/edit"
            android:layout_margin="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>